--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -6,8 +6,7 @@
 {# HERO SECTION #}
 <div>
 	<div class="stimulus d-flex flex-column justify-content-center">
-		<h1 class="text-center mt-4 display-3">Avec Pro Immo Portail, vous trouverez</h1>
-		<span class="text-center mt-4 display-3 justify-content-center" {{ stimulus_controller('symfony/ux-typed', { strings: [ 'la maison familiale idéale !', 'l\'appartement de vos rêves !', 'votre coup de coeur immobilier !', 'votre résidence secondaire !'], loop: true, showCursor: true, cursorChar: '|' })}}></span>
+		{{ include('components/stimulus.html.twig') }}
 	</div>
 	<div class="hero px-0 mt-5">
 		<img class="w-100 h-100 d-flex mx-auto" src="https://images.unsplash.com/photo-1628592102751-ba83b0314276?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2597&q=80" alt="hero image">
@@ -21,32 +20,7 @@
 
 	<div class="container row mx-auto p-0">
 		{% for property in properties %}
-			<div class="col-md-6 col-sm-12 pt-3">
-				<div class="card mb-3">
-					<a href={{ path('app_property_show', {'id': property.id} ) }} class="text-decoration-none text-primary-emphasis">
-						<div class="row g-0">
-							<div class="col-md-4">
-								<img class="img-fluid rounded-start" src={{asset(property.photo)}} alt='{{property.title}} image'>
-							</div>
-							<div class="col-md-8">
-								<div class="card-body">
-									<strong class="d-inline-block mb-0 text-success-emphasis">Louer</strong>
-									<h3 class="mb-0">{{property.price}}€</h3>
-									<div class="mb-1 text-body-secondary">{{property.createdAt|date('d/m/Y')}}</div>
-									<p class="mb-auto">{{property.description|slice(0,45)}}...</p>
-									<div>
-										<strong>{{property.surface}}m²</strong>
-										<p>{{property.town}},
-											{{property.country}}</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</a>
-
-				</div>
-			</div>
-
+			{{ include('components/propertyCard.html.twig') }}
 		{% endfor %}
 	</div>
 	<div class="d-flex justify-content-center mt-3">
@@ -63,34 +37,35 @@
 
 	</div>
 	<div class="col-md-6 col-sm-12 pt-5">
-<h3 class="text-center pt-5">Bienvenue chez Pro Immo Portail !</h3>
+		<h3 class="text-center pt-5">Bienvenue chez Pro Immo Portail !</h3>
 
-		
-<p class="m-auto px-5 pt-3 text-center">Votre passerelle vers le marché immobilier moderne.
-	<br>
-	Nous sommes une agence
 
-	<strong>innovante</strong>
-	dédiée à simplifier la recherche de biens immobiliers, <br>que ce soit pour la location ou l'achat.
-</p>
+		<p class="m-auto px-5 pt-3 text-center">Votre passerelle vers le marché immobilier moderne.
+			<br>
+			Nous sommes une agence
 
-	
+			<strong>innovante</strong>
+			dédiée à simplifier la recherche de biens immobiliers,
+			<br>que ce soit pour la location ou l'achat.
+		</p>
+
+
 	</div>
 </div>
 {# AGENCY DIV #}
 
 <div class="agency row">
 	<div class="col-md-6 col-sm-12 pt-5">
-<h3 class="text-center pt-5">A propos de nous</h3>
+		<h3 class="text-center pt-5">A propos de nous</h3>
 
-<p class="m-auto px-5 pt-3 text-center">Votre passerelle vers le marché immobilier moderne.
-	<br>
-	Nous sommes une agence
+		<p class="m-auto px-5 pt-3 text-center">Votre passerelle vers le marché immobilier moderne.
+			<br>
+			Nous sommes une agence
 
-	<strong>innovante</strong>
-	dédiée à simplifier la recherche de biens immobiliers,
-	<br>que ce soit pour la location ou l'achat.
-</p>
+			<strong>innovante</strong>
+			dédiée à simplifier la recherche de biens immobiliers,
+			<br>que ce soit pour la location ou l'achat.
+		</p>
 
 	</div>
 	<div class="col-lg-6 col-md-12 pt-3">
@@ -104,35 +79,8 @@
 
 
 		<div class="d-flex flex-column justify-content-end m-auto pb-5 ps-5 ms-5">
-			<h4 class="text-center pt-4 pb-2">Contactez-nous :</h4>
-
-			{{ form_start(form) }}
-
-		<div class="mb-3">
-			<label for="contact_Nom">{{ form_label(form.Nom) }}</label>
-			{{ form_widget(form.Nom, {'attr': {'class': 'form-control'}}) }}
-			{{ form_errors(form.Nom) }}
+			{{ include('components/contactus.html.twig') }}
 		</div>
-		<div class="mb-3">
-			<label for="contact_Penom">{{ form_label(form.Prenom) }}</label>
-			{{ form_widget(form.Prenom, {'attr': {'class': 'form-control'}}) }}
-			{{ form_errors(form.Prenom) }}
-		</div>
-		<div class="mb-3">
-			<label for="contact_Email">{{ form_label(form.Email) }}</label>
-			{{ form_widget(form.Email, {'attr': {'class': 'form-control'}}) }}
-			{{ form_errors(form.Email) }}
-		</div>
-		<div class="mb-3">
-			<label for="contact_Telephone">{{ form_label(form.Telephone) }}</label>
-			{{ form_widget(form.Telephone, {'attr': {'class': 'form-control'}}) }}
-			{{ form_errors(form.Telephone) }}
-		</div>
-		<div class="mb-3">
-			<label for="contact_Message">{{ form_label(form.Message) }}</label>
-			{{ form_widget(form.Message, {'attr': {'class': 'form-control'}}) }}
-			{{ form_errors(form.Message) }}
-		</div>
+		<div class="col-lg-6 col-md-12 pt-3"></div>
 	</div>
-	<div class="col-lg-6 col-md-12 pt-3"></div>
-</div>{% endblock %}
+{% endblock %}
