Style property page

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -20,3 +20,19 @@ img {
 .stimulus {
     height: 10rem;
 }
+
+.propertyCard:hover {
+    transform: scale(0.95);
+    -webkit-transform: scale(0.95);
+    -moz-transform: scale(0.95);
+    -ms-transform: scale(0.95);
+    -o-transform: scale(0.95);
+}
+
+.purple {
+    color: #5e17eb;
+}
+
+.cursor-pointer {
+    cursor: pointer;
+}
