--- a/templates/favorite/index.html.twig
+++ b/templates/favorite/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello FavoriteController!
+{% block title %}Pro Immo Portail | Mes Favoris
 {% endblock %}
 
 {% block body %}
