--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -16,7 +16,7 @@
 
 {# LIST OF PROPERTIES SECTION #}
 <div class="property-list container row mx-auto p-0 mb-4">
-	<h2 class="text-center display-4 mb-4">Les biens disponibles:</h2>
+	<h2 class="text-center display-4 mb-4">Les biens disponibles</h2>
 
 	<div class="container row mx-auto p-0">
 		{% for property in properties %}
