--- a/templates/components/navbar.html.twig
+++ b/templates/components/navbar.html.twig
@@ -9,37 +9,56 @@
 			{# Dropdown menu accessible to authenticated users only #}
 			{% if is_granted('IS_AUTHENTICATED_FULLY') %}
 				<div class="dropdown text-end">
-					<div class="mx-3">
+					<div class="mx-3 dropdown ">
 						<p>Vous êtes connecté.e en tant que:</p>
-						<strong class="d-block link-body-emphasis text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-							<i class="fa-solid fa-user"></i>
-							{{app.user.firstName}}</strong>
+						<a class="d-block link-body-emphasis text-decoration-none dropdown-toggle cursor-pointer" data-bs-toggle="dropdown" aria-expanded="false">
+
+							<span class="rounded-pill">
+								<i class="fa-solid fa-user pe-2 purple"></i>
+
+								{{app.user.firstName}}</span>
+
+						</a>
 
 						<ul
 							class="dropdown-menu me-auto">
 							{# Show dashboard to ADMIN ONLY #}
 							{% if is_granted('ROLE_ADMIN') %}
 								<li>
-									<a class="dropdown-item" href={{ path('admin')}} class="nav-link active">Dashboard</a>
+									<a class="dropdown-item" href={{ path('admin')}} class="nav-link active">
+										<i class="fa-solid fa-table-columns pe-2 purple"></i>Dashboard</a>
+
 								</li>
 							{% endif %}
 							{# Show favorites to USER, PRO and ADMIN #}
 							{% if is_granted('ROLE_USER') %}
 								<li>
-									<a class="dropdown-item" href={{ path('app_favorite')}} class="nav-link active">Mes favoris</a>
+									<a class="dropdown-item" href={{ path('app_favorite')}} class="nav-link active">
+										<i class="fa-solid fa-heart pe-2 purple"></i>Mes favoris</a>
+
+
 								</li>
 							{% endif %}
 							{# Show Crete announcment to PRO and ADMIN #}
 							{% if is_granted('ROLE_PRO') %}
 								<li>
-									<a class="dropdown-item" href={{ path('app_property_new')}} class="nav-link active">Déposer une nouvelle annonce</a>
+									<a class="dropdown-item" href={{ path('app_property_new')}} class="nav-link active">
+										<i class="fa-solid fa-plus pe-2 purple"></i>Déposer une nouvelle annonce</a>
+
+
 								</li>
 							{% endif %}
 							<li>
-								<a class="dropdown-item" href={{ path('app_reset_password')}} class="nav-link active">Changer mon mot de passe</a>
+								<a class="dropdown-item" href={{ path('app_reset_password')}} class="nav-link active">
+									<i class="fa-solid fa-gear pe-2 purple"></i>Changer mon mot de passe</a>
+
+
 							</li>
 							<li class="nav-item">
-								<a class="dropdown-item" href={{ path('app_logout')}} class="nav-link active">Déconnexion</a>
+								<a class="dropdown-item" href={{ path('app_logout')}} class="nav-link active">
+									<i class="fa-solid fa-right-from-bracket pe-2 purple"></i>Déconnexion</a>
+
+
 							</li>
 						</div>
 					{% else %}
