--- a/templates/components/stimulus.html.twig
+++ b/templates/components/stimulus.html.twig
@@ -1,3 +1,3 @@
 
-		<h1 class="text-center mt-4 display-3">Avec Pro Immo Portail, vous trouverez</h1>
-		<span class="text-center mt-4 display-3 justify-content-center" {{ stimulus_controller('symfony/ux-typed', { strings: [ 'la maison familiale idéale !', 'l\'appartement de vos rêves !', 'votre coup de coeur immobilier !', 'votre résidence secondaire !'], loop: true, showCursor: true, cursorChar: '|' })}}></span>
+		<h1 class="text-center mt-5 display-5">Avec Pro Immo Portail, vous trouverez</h1>
+		<span class="text-center mt-3 display-3 justify-content-center purple" {{ stimulus_controller('symfony/ux-typed', { strings: [ 'la maison familiale idéale !', 'l\'appartement de vos rêves !', 'votre coup de coeur immobilier !', 'votre résidence secondaire !'], loop: true, showCursor: true, cursorChar: '|' })}}></span>
