--- a/templates/property/show.html.twig
+++ b/templates/property/show.html.twig
@@ -14,38 +14,50 @@
 			<h2>{{ property.Title }}</h2>
 		</a>
 	</header>
+	<div class="container row mx-auto p-0 mb-4">
+		<div class="container row m-auto">
+			<img class="w-auto pb-3" src={{asset(property.photo)}} alt="property">
+			<div class="d-flex flex-column">
+				<div>
+					<h3>{{property.Town}}({{property.PostalCode}})</h3>
 
-	{# TODO photo gallery #}
-	<div{{property.Town}}({{property.PostalCode}})</h3 <div class="container row m-auto"> <img class="w-auto pb-3" src={{asset(property.photo)}} alt=""> <div class="d-flex flex-column"> <h3>>
-		<p>Prix:
-			<span>{{ property.Price }}€</span>
-		</p>
-		<p>Surface:
-			<span>{{ property.Surface }}m²</span>
-		</p>
-		<hr class="col-3 col-md-2 mb-5">
-		<p>Type de propriété:
-			{{ property.Type }}</p>
-		<hr class="col-3 col-md-2 mb-5">
-		<p class="fs-5 col-md-8">Description du bien :
-			<br>{{ property.Description }}</p>
+					<p>
+						<i class="fa-solid fa-wallet purple"></i>
+						<span>{{ property.Price }}€</span>
+					</p>
 
-		<hr class="col-3 col-md-2 mb-5">
-		<div class="d-flex flex-column justify-content-end m-auto pb-5 ps-5 ms-5"></div>
-	</div>
-	{% if is_granted('ROLE_PRO') %}
 
-		<a href="{{ path('app_property_edit', {'id': property.id}) }}">
-			<button class="btn btn-primary mb-2">Editer mon annonce</button>
+				</p>
+				<p>
+					<i class="fa-solid fa-house purple"></i>
+					<span>{{ property.Surface }}m²</span>
 
+				</p>
+			</p>
+			<hr class="col-3 col-md-2 mb-5">
+			<p>Type de propriété:
+				{{ property.Type }}</p>
+			<hr class="col-3 col-md-2 mb-5">
+			<p class="fs-5 col-md-8">Description du bien :
+				<br>{{ property.Description }}</p>
+
+			<hr class="col-3 col-md-2 mb-5">
+			<div class="d-flex flex-column justify-content-end m-auto pb-5 ps-5 ms-5"></div>
+		</div>
+		{% if is_granted('ROLE_PRO') %}
+
+			<a href="{{ path('app_property_edit', {'id': property.id}) }}">
+				<button class="btn btn-primary mb-2">Editer mon annonce</button>
+
+			</a>
+		{% endif %}
+
+
+		<a href="{{ path('app_home') }}">
+			<button class="btn btn-primary ">Retour à l'accueil</button>
 		</a>
-	{% endif %}
 
-
-	<a href="{{ path('app_home') }}">
-		<button class="btn btn-primary ">Retour à l'accueil</button>
-	</a>
-
+	</div>
 
 	{# {{ include('property/_delete_form.html.twig') }} #}
 </div>{% endblock %}
