--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,31 @@
+@import url("https://fonts.googleapis.com/css2?family=Merriweather:ital@0;1&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,300;1,300&display=swap");
+
+.font-merriweather {
+    font-family: "Merriweather", serif, open-sans;
+    font-weight: 400;
+}
+
+.font-mulish {
+    font-family: "Mulish", sans-serif, open-sans;
+    font-weight: 300;
+}
+
+p {
+    font-family: "Mulish", sans-serif, open-sans;
+    font-weight: 300;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: "Merriweather", serif, open-sans;
+    font-weight: 400;
+}
+
 .hero {
     height: 30rem;
 }
