--- a/templates/favorite/index.html.twig
+++ b/templates/favorite/index.html.twig
@@ -5,9 +5,8 @@
 
 {% block body %}
 	<div class="property-list container row mx-auto p-0 mb-4">
-		<h2 class="text-center display-4 mb-4">Mes favoris</h2>
+		<h2 class="text-center mb-4">Mes favoris</h2>
 		{# loop to display saved favorites #}
-
 
 		<div class="container row m-auto">
 			{% for favorite in favorites %}
