--- a/templates/components/navbar.html.twig
+++ b/templates/components/navbar.html.twig
@@ -1,4 +1,5 @@
-<nav class="navbar navbar-expand-sm navbar-light bg-light" aria-label="Third navbar example">
+<nav class="navbar navbar-expand-sm navbar-light bg-light px-4" aria-label="Third navbar example">
+
 	<div class="container-fluid">
 		<a class="navbar-brand" href="{{ path('app_home') }}"><img src={{ asset('images/pro-immo-portail_logo.png') }} alt="Logo" class="img-fluid w-25"/></a>
 		<button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample03" aria-controls="navbarsExample03" aria-expanded="false" aria-label="Toggle navigation">
@@ -13,10 +14,12 @@
 						<p>Vous êtes connecté.e en tant que:</p>
 						<a class="d-block link-body-emphasis text-decoration-none dropdown-toggle cursor-pointer" data-bs-toggle="dropdown" aria-expanded="false">
 
-							<span class="rounded-pill">
+							<span class="rounded-pill bold-mulish">
+
 								<i class="fa-solid fa-user pe-2 purple"></i>
 
 								{{app.user.firstName}}</span>
+
 
 						</a>
 
@@ -66,10 +69,11 @@
 						<div class="text-end ">
 							<ul class="nav nav-pills me-auto">
 								<li class="nav-item">
-									<a href={{ path('app_login')}} class="nav-link active px-2 mx-3">Connexion</a>
+									<a href={{ path('app_login')}} class="btn-purple nav-link px-2 mx-3">Connexion</a>
 								</li>
 								<li class="nav-item">
-									<a href={{ path('app_register')}} class="nav-link active px-2">Inscription</a>
+									<a href={{ path('app_register')}} class="btn-purple nav-link px-2">Inscription</a>
+
 								</li>
 							</ul>
 						</div>
