--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -16,7 +16,7 @@
 
 {# LIST OF PROPERTIES SECTION #}
 <div class="property-list container row mx-auto p-0 mb-4">
-	<h2 class="text-center display-4 mb-4">Les biens disponibles</h2>
+	<h2 class="text-center mb-4">Les biens disponibles</h2>
 
 	<div class="container row mx-auto p-0">
 		{% for property in properties %}
@@ -76,8 +76,6 @@
 
 <div class="row">
 	<div class="col-lg-6 col-md-12 pt-3">
-
-
 		<div class="d-flex flex-column justify-content-end m-auto pb-5 ps-5 ms-5">
 			{{ include('components/contactus.html.twig') }}
 		</div>
