--- a/templates/components/propertyCard.html.twig
+++ b/templates/components/propertyCard.html.twig
@@ -1,4 +1,4 @@
-<div class="col-md-6 col-sm-12 pt-3">
+<div class="col-sm-12 col-lg-6 pt-3">
 	<div class="card mb-3 propertyCard">
 		<a href={{ path('app_property_show', {'id': property.id} ) }} class="link-body-emphasis text-decoration-none">
 
