Ajout d'une barre de recherche

--- a/templates/components/navbar.html.twig
+++ b/templates/components/navbar.html.twig
@@ -5,6 +5,7 @@
 		<button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample03" aria-controls="navbarsExample03" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
+		<a href={{ path('app_lookup') }}><button class="btn btn-primary">Faire une recherche</button></a>
 		<div
 			class="navbar-collapse collapse me-auto justify-content-end" id="navbarsExample03">
 			{# Dropdown menu accessible to authenticated users only #}
