--- a/templates/property/new.html.twig
+++ b/templates/property/new.html.twig
@@ -5,8 +5,10 @@
 
 {% block body %}
 	<div class="container row m-auto">
-		<h1>Créer une nouvelle annonce</h1>
-		{{ include('property/_form.html.twig') }}
+		<div class="container my-5">
+			<h1 class="text-center">Créer une nouvelle annonce</h1>
+			{{ include('property/_form.html.twig') }}
+		</div>
 	</div>
 
 {% endblock %}
