--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -7,38 +7,39 @@
 	{% for flash_error in app.flashes('verify_email_error') %}
 		<div class="alert alert-danger" role="alert">{{ flash_error }}</div>
 	{% endfor %}
+	<div class="container my-5">
+		<h1 class="text-center">Créer un compte</h1>
 
-	<h1 class="text-center">Créer un compte</h1>
+		<div class="d-flex flex-column w-50 m-auto gap-2">
+			{{ form_errors(registrationForm) }}
 
-	<div class="d-flex flex-column w-50 m-auto gap-2">
-		{{ form_errors(registrationForm) }}
-
-		{{ form_start(registrationForm) }}
-		{{ form_row(registrationForm.firstname) }}
-		{{ form_row(registrationForm.lastname) }}
-		{{ form_row(registrationForm.isPro) }}
-		{{ form_row(registrationForm.email) }}
-		{{ form_row(registrationForm.plainPassword, {
+			{{ form_start(registrationForm) }}
+			{{ form_row(registrationForm.firstname) }}
+			{{ form_row(registrationForm.lastname) }}
+			{{ form_row(registrationForm.isPro) }}
+			{{ form_row(registrationForm.email) }}
+			{{ form_row(registrationForm.plainPassword, {
                 label: 'Mot de passe'
             }) }}
 
 
-		{{ form_row(registrationForm.agreeTerms) }}
+			{{ form_row(registrationForm.agreeTerms) }}
 
-		{# <form action="">
-		<input class="me-2" type="checkbox">Mémoriser mon identifiant et mon mot de passe lors de mes prochaines visites sur ce site</form> #}
-		<button type="submit" class="d-flex flex-column m-auto mb-3 btn btn-primary">Créer mon compte</button>
-		{{ form_end(registrationForm) }}
-	</div>
+			{# <form action="">
+																							<input class="me-2" type="checkbox">Mémoriser mon identifiant et mon mot de passe lors de mes prochaines visites sur ce site</form> #}
+			<button type="submit" class="d-flex flex-column m-auto mb-3 btn btn-purple">Créer mon compte</button>
+			{{ form_end(registrationForm) }}
+		</div>
 
 
-	<hr class="w-50 m-auto">
+		<hr class="w-50 m-auto">
 
-	<div class="d-flex flex-column w-50 m-auto justify-content-center align-items-center gap-2 mt-2 mb-5">
-		<p>Déjà inscrit ?
-		</p>
-		<a href={{ path('app_login') }}>
-			<button class="btn btn-primary">Connectez-vous</button>
-		</a>
+		<div class="d-flex flex-column w-50 m-auto justify-content-center align-items-center gap-2 mt-2 mb-5">
+			<p>Déjà inscrit ?
+			</p>
+			<a href={{ path('app_login') }}>
+				<button class="btn btn-purple">Connectez-vous</button>
+			</a>
+		</div>
 	</div>
 {% endblock %}
