--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -27,7 +27,7 @@
 
 			<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 
-			<button class="btn btn-lg btn-primary m-auto" type="submit">
+			<button class="btn btn-lg btn-purple m-auto" type="submit">
 				Se connecter
 			</button>
 		</div>
@@ -43,7 +43,7 @@
 		<p class="text-center mt-3">Vous n'avez pas encore de compte ?</p>
 
 		<a href={{path('app_register')}}>
-			<button class="btn btn-lg btn-primary">Créer un compte</button>
+			<button class="btn btn-lg btn-purple">Créer un compte</button>
 		</a>
 
 	</div>
